# SJLauncher

./: CMakeLists.txt
src/: main.cpp
src/model/: MinecraftAPI.cpp  MinecraftAPI.h  Types.h
src/util/: Downloader.cpp  Downloader.h  Launcher.cpp  Launcher.h  Settings.cpp  Settings.h  VersionInstaller.cpp  VersionInstaller.h
src/view/: MainWindow.cpp  MainWindow.h
vscode/: settings.json
